# queueuify

./: .gitignore  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .gitignore  Dockerfile  README.md  authentication.py  docker-compose.yml  main.py  models.py  pyproject.toml
backend/config/: settings.py
backend/oauth/: models.py  oauth.py
backend/playback/: __init__.py  base.py  spotify_host.py  state_cache.py
backend/session/: member_service.py  models.py  playback_sync.py  queue_service.py  session.py  settings_service.py  utils.py
backend/spotify/: spotify.py
backend/spotify_connector/: models.py  spotify.py
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  qrcode.d.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.interceptor.spec.ts  auth.interceptor.ts  login.service.spec.ts  login.service.ts
frontend/src/app/join-session-dialog/: join-session-dialog.component.html  join-session-dialog.component.spec.ts  join-session-dialog.component.ts
frontend/src/app/landing/: landing.component.html  landing.component.spec.ts  landing.component.ts
frontend/src/app/member-route/: member-route.component.html  member-route.component.scss  member-route.component.spec.ts  member-route.component.ts
frontend/src/app/menubar/: menubar.component.html  menubar.component.scss  menubar.component.ts
frontend/src/environments/: environments.prod.ts
(+47 files in other folders)
